dataset1235/2025-2/2318198438/users/3878856075/executions/2445341515_604674078.log
== RUN (2025-09-02 00:21:04)
-- CODE: 

valor_em_dolares=input(:)
print(round(valor_em_dolares*3,22))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=input(:)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=input(:)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=input(:)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=input(:)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=input(:)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=input(:)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:23:49)
-- CODE: 

valor_em_dolares=float(input(":"))
print(round(valor_em_dolares*3,22))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
:6.0
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
:54.0
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
:42.0
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
:18.0
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
:21.0
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
:3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:22:27)
-- CODE: 

valor_em_dolares=(float.input(":")
print(round(valor_em_dolares*3,22))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=(float.input(":")
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=(float.input(":")
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=(float.input(":")
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=(float.input(":")
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=(float.input(":")
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=(float.input(":")
                     ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:22:50)
-- CODE: 

valor_em_dolares=float(input(":"))
print(round(valor_em_dolares*3,22))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
:6.0
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
:54.0
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
:42.0
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
:18.0
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
:21.0
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
:3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:23:40)
-- CODE: 

valor_em_dolares=int(input(":"))
print(round(valor_em_dolares*3,22))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
:6
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
:54
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
:42
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
:18
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
:21
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
:3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:24:22)
-- CODE: 

valor_em_dolares=float(input(":"))
print(round(valor_em_dolares*3.22 , 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
:6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
:57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
:45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
:19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
:22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
:3.22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:21:13)
-- CODE: 

valor_em_dolares=input(":")
print(round(valor_em_dolares*3,22))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valor_em_dolares*3,22))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valor_em_dolares*3,22))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valor_em_dolares*3,22))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valor_em_dolares*3,22))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valor_em_dolares*3,22))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valor_em_dolares*3,22))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:24:18)
-- CODE: 

valor_em_dolares=float(input(":"))
print(round(valor_em_dolares*3.22 , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
:6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
:57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
:45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
:19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
:22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
:3.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:22:17)
-- CODE: 

valor_em_dolares=float(input(":")
print(round(valor_em_dolares*3,22))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=float(input(":")
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=float(input(":")
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=float(input(":")
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=float(input(":")
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=float(input(":")
                          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
File "XXXX", line 2
    valor_em_dolares=float(input(":")
                          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
